--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+  background-color: #919993;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+img {
+  text-align: center;
+}
+
+figcaption {
+  font-size: 12pt;
+  text-align: center;
+}
+
+#featured-property p {
+  text-align: center;
+  width: 800px;
+}
+
+#details {
+  display: block;
+}
+
+#details div {
+  float: left;
+  background: #919993;
+  text-align: center;
+  width: 25%;
+}
