--- a/style.css
+++ b/style.css
@@ -3,3 +3,34 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+#featured-property {
+  text-align: center;
+  font-size: 20px;
+}
+
+nav {
+  text-align: center;
+}
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: red;
+}
+
+#details {
+  justify-content: center;
+  display: flex;
+  float: left;
+  align-items: center;
+  margin: auto;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  background-color: grey;
+}
