--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+nav a {
+  margin-right: 10px;
+  margin-left: 10px;
+  background-color: grey;
+}
+
+figure {
+  text-align: center;
+}
+
+figcaption {
+  font-size: 10px;
+}
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 10px;
+}
+
+#details {
+  display: block;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  background-color: grey;
+}
+
